<resources>
    <string name="app_name">Verity</string>
    <string name="app_name_full">Verity Scanning</string>
    <string name="register_label">Register</string>
    <string name="register_name">Name</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="invalid_id">Invalid Email</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_internet_connection">You do not have internet connection</string>
    <string name="login_label">Login</string>
    <string name="login_or">OR</string>
    <string name="login_not_yet_registered">Not Registered ? Start Here</string>
    <string name="do_not_match_pass_confirmpass">Password and Confirm Password do not match</string>
    <string name="enter_register_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_register_email">Enter E-mail</string>
    <string name="enter_register_password">Enter Password</string>
    <string name="password_min_lenght">Password length should be minimum 6 characters.</string>
    <string name="failed_to_send_reset_email">Failed to send reset email!</string>
    <string name="enter_register_confirm_password">Enter Verify Password</string>
    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="loading_users_error">Loading users error. Error</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string-array name="sound">
        <item>beep 1</item>
        <item>beep 2</item>
        <item>beep 3</item>
        <item>beep 4</item>
        <item>beep 5</item>
    </string-array>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="invite">Invite</string>
    <string name="dlg_creating_new_user">Creating new user…</string>
    <string name="title_login_activity">Enter to chat</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>
    <string name="app_id">288648678174508</string>
    <string name="twitter_consumer_key">0I5gBROGbR9kdx7PZ2MWkwWom</string>
    <string name="twitter_consumer_secret">b6g4ZN1VDjs4Wx714BvWFZfrkMpEexveeHysyloLHnEzW4CS1Z</string>
    <string name="banner_ad_unit_id">ca-app-pub-6103044640428504/4894956476</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="set_birthday">Say Birthday</string>
    <string name="authentication_failed">Authentication failed please try again.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="settings">Settings</string>
    <string name="location_summary">Locations Summary</string>
    <string name="upc">UPC :</string>
    <string name="category">Category :</string>
    <string name="logout_message">Are you sure you want to logout ?</string>
    <string name="profile_update_done">Profile updated successfully.</string>
    <string name="this_product_does_not_exist">This product does not exist.</string>
    <string name="listing_details">Listing Details</string>
    <string name="certifications">Certifications:</string>
    <string name="no_result_found">No search results found.</string>
    <string name="password_sent_on_your_mail">Password sent on you entered mail,Thank you.</string>
    <string name="forget_password_failed">Forget password sent request failed,please try again.</string>
    <string name="signup_failed">Sign Up Failed Please try again.</string>
    <string name="invitation_title">Certified, Inc. introduces Verity.</string>
    <string name="invitation_message">Do you want to know more about your food or other products? Download Verity Scanning and find out!</string>
    <string name="invitation_custom_image_t">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="app_code">tqk28</string>
    <string name="referal_code">Referral Code</string>
    <string name="click_to_share">Click To Share!</string>
    <string name="ref">REF - </string>
    <string name="ios_clientID">874376514949-57er50ei596s5tn9pbl8kb6mt93f9rtq.apps.googleusercontent.com</string>
    <string name="profile_image_select_title">Upload Pictures Option</string>
    <string name="profile_image_select_message">How do you want to set your picture?</string>
    <string name="profile_image_opt1">Gallery</string>
    <string name="profile_image_opt2">Camera</string>
    <string name="camera_error_message">Error while capturing image</string>
    <string name="uploadfile_path">Upload</string>
    <string name="upc_scan">Upc Scan</string>
    <string name="ucr_scan">UCR scan</string>
    <string name="ocr_scan">OCR scan</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="Date">Date</string>
    <string name="Link">Link</string>
    <string name="titlee">Title:</string>
    <string name="usda_recalls">USDA Recalls</string>
    <string name="usda_recalls_details">USDA Recall Details</string>
    <string name="image_picker_error">Image picker Error</string>
    <string name="selector">Select Image</string>
    <string name="scanResult">Scan Result</string>
    <string name="loading_message">Uploading image. Please wait.</string>
    <string name="allRecallRss">All Recalls RSS</string>
    <string name="RrecallsRss">Recalls RSS</string>
    <string name="recallsforChildren">Recalls for Children</string>
    <string name="selectItem">Select Item</string>
    <string name="USDA_recall">USDA recall</string>
    <string name="Recalls_RSS">Recalls RSS</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="menu_chat_info">Chat info</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="menu_select_people_done">Done</string>
    <string name="dialogs_list_hint">Select a Dialog to Chat</string>
    <string name="dialogs_get_error">Get dialogs errors</string>
    <string name="placeholder_username_you">%s (you)</string>
    <string name="text_select_user_to_call">Select users you want to call</string>
    <string name="dlg_login">Login…</string>
    <string name="select_users_list_hint">Select Users you want to chat</string>
    <string name="select_users_create_chat">Create new chat</string>
    <string name="select_users_edit_chat">Add Users to chat</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>
    <string name="chat_empty_start_new_chat">Start new chat.</string>
    <string name="chat_info">Chat info</string>
    <string name="group_chat_join_error">Could not join chat, errors:</string>
    <string name="error_leave_chat">Error leaving room</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="no_internet_exist">Internet Not Available.</string>
    <string name="permission_require">Permission required for this app</string>
    <string name="redirect_setting">Go to settings and enable permissions</string>
    <string name="try_again">Try again</string>
    <string name="try_again_unsuccess">Try again or may be some file is not supported</string>
    <string name="downloadfile_path">Download</string>
    <string name="compress_video_folderName">Video</string>
    <string name="downloadfile_success">File Downloaded Successfully</string>
    <string name="downloadfile_fail">File Downloaded Fail</string>
    <string name="header_action_done">DONE</string>
    <string name="signUp_email_verification">An email have been sent for you for verification.</string>
    <string name="signUp_quickblox_error">Error in register with quickBlox</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_ok">OK</string>
    <string name="logout_cancel">Cancel</string>
    <string name="closeproject_message">Are you sure want to end case?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign IN</string>
    <string name="lawyer_category">Category</string>
    <string name="create_profile">Create Profile</string>
    <string name="hour">/ hour</string>
    <string name="salutation">Salutation</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="phoneno">Phone Number</string>
    <string name="address">Address</string>
    <string name="post_code">Post Code</string>
    <string name="user_sign_up_failed">User Sign Up Failed Please Try Again.</string>
    <string name="enter_valid_email">Enter Valid Email.</string>
    <string name="header_welcome">Welcome %1$s!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="footer_home">Home</string>
    <string name="footer_feed">Feed</string>
    <string name="footer_ongoing">Ongoing</string>
    <string name="footer_notification">Notification</string>
    <string name="footer_past">Past</string>
    <string name="footer_me">Me</string>
    <string name="footer_createcase">Create case</string>
    <string name="footer_feeds">My Feed</string>
    <string name="footer_search_lawyer">Lawyer</string>
    <string name="my_profile_update">Update Profile</string>
    <string name="salution1">Mr</string>
    <string name="salution2">Ms</string>
    <string name="salution3">Dr</string>
    <string name="salution4">Prof</string>
    <string name="camera_cancelled">Cancelled</string>
    <string name="education">Education</string>
    <string name="currentworkplace">Current work place</string>
    <string name="currentoccupation">Current Occupation</string>
    <string name="accomplishments">Accomplishments</string>
    <string name="hobby">Hobby</string>
    <string name="experience">Experience</string>
    <string name="dateofstart">Date of start</string>
    <string name="selectImageType1">Gallery</string>
    <string name="selectImageType2">Camera</string>
    <string name="profil_display_hobby"><b>Hobbies:</b></string>
    <string name="profilhobby">Hobbies</string>
    <string name="profil_display_Experience"><b>Legal Experience:</b></string>
    <string name="profil_display_education"><b>Education:</b></string>
    <string name="submit">Send Quotation</string>
</resources>