<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_login_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/lawyer_main_bg"
                android:padding="10dp"
                tools:context="lexlink.app.com.lexlink.activities.UserLoginActivity">

    <ToggleButton
        android:id="@+id/login_toggle"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_toggle"
        android:textOff=""
        android:textOn=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_toggle"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:drawableLeft="@drawable/email_icon_blue"
            android:drawablePadding="@dimen/fivedp"
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/login_text_color"/>

        <EditText
            android:drawableLeft="@drawable/lock_psw_icon"
            android:drawablePadding="@dimen/fivedp"
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/login_text_color"/>

        <TextView
            android:id="@+id/login_frogot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/login_forgot_password"
            android:textColor="@color/login_text_color"/>


        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/button_bg"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/button_bg"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>
