<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White"
        android:orientation="vertical">


        <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/only_verify_text_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="vertical">


            <!--  -->



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:gravity="center">



                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"

                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="7dp"
                        android:paddingLeft="7dp"
                        android:textSize="15sp"
                        android:text="@string/email"/>


                    <EditText
                        android:id="@+id/edittext_email"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:background="@android:color/transparent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                       android:padding="5dp"
                        />
                </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bg"

                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:paddingLeft="7dp"
                    android:textSize="15sp"
                    android:text="@string/register_password"/>


                <EditText
                    android:id="@+id/edittext_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"

                    />
            </LinearLayout>



            <TextView

                android:id="@+id/textView_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="12dp"
                android:gravity="left"

                android:text="@string/forgot_password"
                android:textColor="@color/menu_blue_bg"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/register_bg"
                android:text="@string/login_label"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/login_or"
                android:textAppearance="?android:attr/textAppearanceLarge"

                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageview_google"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/google_small_icon" />

                <ImageView
                    android:id="@+id/imageview_facebook"

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/facebook_small_icon" />

                <ImageView
                    android:id="@+id/imageview_twitter"

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/twitter_small_icon" />


            </LinearLayout>


        </LinearLayout>


        <TextView

            android:id="@+id/textView_not_registered_register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/login_not_yet_registered"
            android:textColor="@color/menu_blue_bg"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>